# client-python

./: Dokerfile.test  README.md  codecov.yml  config.json  gen_proto_files.sh  pip.conf  pyproject.toml  readme-ai.md  requirements-test.txt  requirements.txt  run_demo.sh  run_tests.sh
.github/workflows/: docker-image.yml
.trunk/: trunk.yaml
agent/api/proto/: protoconf_service.proto  protoconf_service_pb2.py  protoconf_service_pb2_grpc.py
agent/api/proto/v1/: protoconf_service.proto
demo_app/: demo_app.py
protoconfloader/: __init__.py  protoconfloader.py
protoconfloader/agent/api/proto/v1/: protoconf_service_pb2.py  protoconf_service_pb2_grpc.py
tests/: test_protoconfloader.py
tests/test_data/: config.json  crawler.proto  crawler_pb2.py
tests/test_data/materialized_config/crawler/: text_crawler.materialized_JSON
