[tool.poetry]
name = "protoconfloader"
version = "0.1.1"
description = ""
authors = ["Aviv Laufer <aviv.laufer@gmail.com>","Shahar Mintz <shahar.mintz309@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpclib = "^0.4.7"
protobuf = "^5.27.1"
asyncio = "^3.4.3"
grpcio = "^1.65.5"
grpcio-tools = "^1.65.5"
watchdog = "^5.0.0"
aiofiles = "^24.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
codecov-cli="^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
